--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=CommitSpring
 
 # SERVER
 # PORT
-# TODO: 작업 시 포트정해서 수정할 것
+# TODO: 작업 시 포트정해서 수정할 것
 server.port=8927
 
 # FILTER
@@ -20,7 +20,7 @@ spring.devtools.restart.enabled=true
 
 
 # MYSQL
-# TODO: 작업시 sql정보 수정할 것
+# TODO: 작업시 sql정보 수정할 것
 spring.datasource.url=jdbc:mysql://localhost:3306/webdb
 spring.datasource.username=webdb
 spring.datasource.password=webdb
